@@ -10,6 +10,11 @@ And to stop the gameplay of farming currencies at endgame to just reroll your ex
 * STAT GROWTH FORMULA CHANGES! now instead of stats being x * level. They are in a different formula that makes them grow slower at low lvls (lvl 2 mobs are no longer 2 times stronger than lvl 1) but a lvl 100 mob is now MUCH stronger than a lvl 90.
 (this will likely lead to bugs! Beware of weirdness in stats and battle)
 
+* COMBAT OVERHAUL! 
+//Attack speed should be fixed now
+there is no longer many dmg numbers for every element you do, it's all combined into 1 now.
+i changed internal code of it, should be buggy
+
 Other more minor changes:
 reduced droprates a bit (config change, i feel there's a bit too much drops cus i kept adding more and more types of loot)
 added bonus droprate for loot of lvl 5 and less if player is also lvl 5 or less
